<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_alignParentTop="true"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">


        <TextView
            android:text="@string/welcome"
            android:layout_gravity="center"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="@color/white_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.Toolbar>



    <TextView

        android:layout_marginTop="25dp"
        android:id="@+id/title"
        android:textStyle="bold"
        android:text="@string/proceed_title"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridView

            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/gridView"
            android:numColumns="2"
            android:horizontalSpacing="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/proceed"
            android:layout_width="match_parent"
            android:layout_marginBottom="40dp"
            android:text="@string/proceed"
            android:textColor="@color/white_text_color"
            android:background="@drawable/button_background_2"
            android:layout_height="wrap_content"/>


    </LinearLayout>




</LinearLayout>